scrollbar fix and styles

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ header {
 }
 
 .see-blur {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     left: 0;
     top: 0;
@@ -220,7 +220,7 @@ header {
     display: flex;
     flex-direction: column;
     gap: 18px;
-    padding: 12px 0 30px 0;
+    padding: 12px 10px 30px 10px;
     align-items: center;
     overflow-y: scroll;
     height: 400px;
@@ -228,6 +228,22 @@ header {
 
 
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+    background-color: #f8f8f8;
+    ;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #252525;
+    ;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #4d4d4d;
+}
+
 
 .cart-product {
     display: flex;
